<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/userdata"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/stock_price"/>

        <TextView
            android:id="@+id/stockPrice"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="16dp"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/stock_reqd"/>

        <EditText
            android:id="@+id/stockWanted"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:autofillHints="@string/no_of_stocks"
            android:hint="@string/no_of_stocks"
            android:inputType="numberSigned"
            android:padding="16dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/purchase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/purchase"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/stock_reqd"/>

        <EditText
            android:id="@+id/stockSelled"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:autofillHints="@string/stock_sell"
            android:hint="@string/no_of_stocks"
            android:inputType="numberSigned"
            android:padding="16dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/sell"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/sell"/>
</LinearLayout>